# postgres95

./: .gitignore  CMakeLists.txt  Makefile.global  readme.md
include/: c.h  (+2 more)
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  makeID
src/backend/access/: CMakeLists.txt
src/backend/access/common/: CMakeLists.txt  heaptuple.c  heapvalid.c  indextuple.c  indexvalid.c  printtup.c  scankey.c  tupdesc.c
src/backend/access/hash/: CMakeLists.txt  hash.c  hashfunc.c  hashinsert.c  hashovfl.c  hashpage.c  hashscan.c  hashsearch.c  hashstrat.c  hashutil.c
src/backend/access/heap/: CMakeLists.txt  heapam.c  hio.c  stats.c
src/backend/access/index/: CMakeLists.txt  genam.c  indexam.c  istrat.c
src/backend/access/nbtree/: CMakeLists.txt  nbtcompare.c  nbtinsert.c  nbtpage.c  nbtree.c  nbtscan.c  nbtsearch.c  nbtsort.c  nbtstrat.c  nbtutils.c
src/backend/access/rtree/: CMakeLists.txt  rtget.c  rtproc.c  rtree.c  rtscan.c  rtstrat.c
src/backend/access/transam/: CMakeLists.txt  transam.c  transsup.c  varsup.c  xact.c  xid.c
src/backend/bootstrap/: CMakeLists.txt  boot.sed  bootscanner.l  bootstrap.c
src/backend/catalog/: CMakeLists.txt  catalog.c  heap.c  index.c  indexing.c  pg_aggregate.c  pg_operator.c  pg_proc.c  pg_type.c
src/backend/commands/: CMakeLists.txt  async.c  cluster.c  command.c  copy.c  creatinh.c  defind.c  define.c  explain.c  purge.c  recipe.c  remove.c  rename.c  vacuum.c  view.c
src/backend/commands/_deadcode/: version.c
src/backend/executor/: CMakeLists.txt  execAmi.c  execFlatten.c  execJunk.c  execMain.c  execProcnode.c  execQual.c  execScan.c  execTuples.c  execUtils.c  functions.c  nodeAgg.c  nodeAppend.c  nodeGroup.c  nodeHash.c  nodeHashjoin.c  nodeIndexscan.c  nodeMaterial.c  nodeMergejoin.c  nodeNestloop.c  nodeResult.c  nodeSeqscan.c  nodeSort.c  nodeTee.c  nodeUnique.c
src/backend/lib/: CMakeLists.txt  bit.c  dllist.c  fstack.c  hasht.c  lispsort.c  qsort.c  stringinfo.c
src/backend/libpq/: CMakeLists.txt  auth.c  be-dumpdata.c  be-fsstubs.c  be-pqexec.c  portal.c  portalbuf.c  pqcomm.c  pqpacket.c  pqsignal.c
src/backend/main/: CMakeLists.txt  main.c
src/backend/nodes/: CMakeLists.txt  copyfuncs.c  equalfuncs.c  list.c  makefuncs.c  nodeFuncs.c  nodes.c  outfuncs.c  print.c  read.c  readfuncs.c
src/backend/optimizer/: CMakeLists.txt
src/backend/optimizer/path/: CMakeLists.txt  allpaths.c  clausesel.c  costsize.c  hashutils.c  indxpath.c  joinpath.c  joinrels.c  joinutils.c  mergeutils.c  orindxpath.c  prune.c
src/backend/optimizer/plan/: CMakeLists.txt  createplan.c  initsplan.c  planmain.c  planner.c  setrefs.c
src/backend/optimizer/prep/: CMakeLists.txt  archive.c  prepqual.c  preptlist.c  prepunion.c
src/backend/optimizer/util/: CMakeLists.txt  clauseinfo.c  clauses.c  indexnode.c  internal.c  joininfo.c  keys.c  ordering.c  pathnode.c  plancat.c  relnode.c  tlist.c  var.c
src/backend/parser/: CMakeLists.txt  analyze.c  catalog_utils.c  dbcommands.c  gram.y  keywords.c  parse_query.c  parser.c  scan.l  scansup.c
src/backend/port/linux/: dynloader.c
src/backend/port/win32/: nt.c
src/backend/postmaster/: CMakeLists.txt  postmaster.c
src/backend/regex/: CMakeLists.txt  regcomp.c  regerror.c  regexec.c  regfree.c
src/backend/rewrite/: CMakeLists.txt  locks.c  rewriteDefine.c  rewriteHandler.c  rewriteManip.c  rewriteRemove.c  rewriteSupport.c
src/backend/storage/: CMakeLists.txt
src/backend/storage/buffer/: CMakeLists.txt  buf_init.c  buf_table.c  bufmgr.c  freelist.c  localbuf.c
src/backend/storage/file/: CMakeLists.txt  fd.c
src/backend/storage/ipc/: CMakeLists.txt  ipc.c  ipci.c  s_lock.c  shmem.c  shmqueue.c  sinval.c  sinvaladt.c  spin.c
src/backend/storage/large_object/: CMakeLists.txt  inv_api.c
src/backend/storage/lmgr/: CMakeLists.txt  lmgr.c  lock.c  multi.c  proc.c  single.c
src/backend/storage/page/: CMakeLists.txt  bufpage.c  itemptr.c
src/backend/storage/smgr/: CMakeLists.txt  md.c  mm.c  smgr.c  smgrtype.c
src/backend/tcop/: CMakeLists.txt  aclchk.c  dest.c  fastpath.c  postgres.c  pquery.c  utility.c
src/backend/tioga/: CMakeLists.txt  Varray.c  tgRecipe.c
src/backend/utils/: CMakeLists.txt
src/backend/utils/adt/: CMakeLists.txt  acl.c  arrayfuncs.c  arrayutils.c  bool.c  char.c  chunk.c  date.c  datetimes.c  datum.c  dt.c  filename.c  float.c  geo-ops.c  geo-selfuncs.c  int.c  like.c  misc.c  nabstime.c  name.c  not_in.c  numutils.c  oid.c  oidint2.c  oidint4.c  oidname.c  regexp.c  regproc.c  selfuncs.c  sets.c  tid.c  varchar.c  varlena.c
src/backend/utils/cache/: CMakeLists.txt  catcache.c  fcache.c  inval.c  lsyscache.c  rel.c  relcache.c  syscache.c
src/backend/utils/error/: CMakeLists.txt  assert.c  elog.c  exc.c  excabort.c  excid.c  format.c
src/backend/utils/fmgr/: CMakeLists.txt  dfmgr.c  fmgr.c
src/backend/utils/hash/: CMakeLists.txt  dynahash.c  hashfn.c
src/backend/utils/init/: CMakeLists.txt  enbl.c  findbe.c  globals.c  magic.c  miscinit.c  postinit.c
src/backend/utils/mmgr/: CMakeLists.txt  aset.c  mcxt.c  oset.c  palloc.c  portalmem.c
src/interfaces/: CMakeLists.txt
src/interfaces/libpgtcl/: CMakeLists.txt  libpgtcl.h  pgtcl.c  pgtclCmds.c  pgtclCmds.h  pgtclId.c  pgtclId.h
src/interfaces/libpq/: CMakeLists.txt  fe-auth.c  fe-auth.h  fe-connect.c  fe-exec.c  fe-lobj.c  fe-misc.c  libpq-fe.h  pg_hba  pqsignal.c  pqsignal.h
src/interfaces/libpq++/: CMakeLists.txt  libpq++.H  pgconnection.cc  pgenv.cc  pglobject.cc
src/mk/port/: postgres.mk.linux
src/test/bench/: create.source
src/test/examples/: testlibpq.c  testlibpq2.c  testlibpq3.c  testlibpq4.c  testlo.c  testlo2.c
src/test/regress/: create.source  destroy.source  errors.source  queries.source  regress.c  security.source
src/test/suite/: agg.sql  date.sql  float.sql  group.sql  group_err.sql  inh.sql  join.sql  oper.sql  parse.sql  quote.sql  rules.sql  select.sql  sort.sql  sqlcompat.sql  time.sql  varchar.sql  views.sql
src/tutorial/: advanced.source  basics.source  complex.source  funcs.source  syscat.source
src/tutorial/C-code/: beard.c  complex.c  funcs.c
(+254 files in other folders)
