set(CMAKE_MODULE_PATH
        ${CMAKE_CURRENT_SOURCE_DIR}/backend
#        ${CMAKE_CURRENT_SOURCE_DIR}/bin
#        ${CMAKE_CURRENT_SOURCE_DIR}/interfaces
#        ${CMAKE_CURRENT_SOURCE_DIR}/gausskernel
#        ${CMAKE_CURRENT_SOURCE_DIR}/test
        )

#add_subdirectory(bin)
add_subdirectory(backend)
#add_subdirectory(interfaces)
#add_subdirectory(lib)
#add_subdirectory(gausskernel)
#add_subdirectory(test)